# KinectPuppeteering

./: CMakeLists.txt  KinectPuppeteering.ui  KinectPuppeteeringViewer.cpp  KinectPuppeteeringViewer.h  KinectSkeleton.cpp  KinectSkeleton.h  KinectSkeletonRigger.cpp  KinectSkeletonRigger.h  main.cpp  rigging.txt  skeleton_21  skeleton_34  skeleton_41  skeleton_56  skeleton_67  skeleton_75  std.h  temp17.xml
Pinocchio/: CMakeLists.txt  Pinocchio.cpp  discretization.cpp
PinocchioUI/: CMakeLists.txt
